[package]
name = "kwavers"
version = "3.0.0"
edition = "2021"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
description = "Ultrasound Simulation Toolbox with Cavitation and Light Physics"
license = "MIT"
repository = "https://github.com/ryancinsight/kwavers"
keywords = ["ultrasound", "simulation", "physics", "cavitation", "sonoluminescence", "medical-imaging"]
categories = ["science", "simulation", "medical"]

# This is a workspace member - see root Cargo.toml for workspace configuration

[dependencies]
# `kwavers` is the thin top-level app/integration crate (ADR 011 amendment): it
# hosts the binary + cross-cutting tests/examples/benches and re-exports NOTHING.
# It depends on the layer crates directly so those targets can use them.

# Foundation layer. `channels`+`registration` are always-on (flume/
# ritk-registration); `gpu` and `nifti` are forwarded from this crate's features.
kwavers-core = { path = "../kwavers-core", features = ["channels", "registration"] }
kwavers-optics = { path = "../kwavers-optics" }
kwavers-math = { path = "../kwavers-math" }
kwavers-grid = { path = "../kwavers-grid" }
kwavers-transducer = { path = "../kwavers-transducer" }
kwavers-receiver = { path = "../kwavers-receiver" }
kwavers-source = { path = "../kwavers-source" }
kwavers-boundary = { path = "../kwavers-boundary" }
kwavers-phantom = { path = "../kwavers-phantom" }
kwavers-medium = { path = "../kwavers-medium" }
kwavers-field = { path = "../kwavers-field" }
kwavers-signal = { path = "../kwavers-signal" }
kwavers-domain = { path = "../kwavers-domain" }
kwavers-physics = { path = "../kwavers-physics" }
kwavers-solver = { path = "../kwavers-solver" }
kwavers-analysis = { path = "../kwavers-analysis" }
kwavers-simulation = { path = "../kwavers-simulation" }
kwavers-diagnostics = { path = "../kwavers-diagnostics" }
kwavers-therapy = { path = "../kwavers-therapy" }
# Consolidated GPU backend. Regular dep (tiny without the `gpu` feature — just
# allocation profiling); the heavy wgpu/WGSL paths activate via `kwavers-gpu/gpu`.
kwavers-gpu = { path = "../kwavers-gpu" }

# Essential numerical computing
ndarray = { version = "0.16", features = ["rayon", "serde"] }
ndarray-npy = { version = "0.9", default-features = false, features = ["compressed_npz"] }
rayon = "1.10"
num-complex = "0.4"
num-traits = "0.2"
apollo = { workspace = true }

# Error handling (production critical)
thiserror = "1.0"
anyhow = "1.0"

# Serialization (minimal)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Unit safety
uom = { version = "0.36", default-features = false, features = ["f64", "si", "std"] }

# Linear algebra
nalgebra = { version = "0.32" }
gaia = { workspace = true }

# Essential utilities
log = "0.4"
env_logger = "0.11"
tracing = { version = "0.1", features = ["attributes"] }
bitflags = "2.4"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
regex = "1.8"
# NOTE: medical-image I/O (DICOM, NIfTI, …) is owned by ritk-io and bridged in
# `domain::imaging::medical::ritk_bridge`; kwavers has no direct format-crate deps.
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"

# Async runtime (Sprint 138 - Persona Requirements)
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

# Zero-copy serialization (Sprint 138 - Persona Requirements)
rkyv = { version = "0.7", features = ["validation"], optional = true }


# Concurrency
parking_lot = "0.12"
once_cell = "1.19"
flume = "0.11"

# Testing utilities (minimal)
approx = "0.5"

# CONDITIONAL FEATURES (disabled by default)
# GPU acceleration (optional)
wgpu = { version = "26.0", features = ["wgsl"], optional = true }
bytemuck = { version = "1.19", features = ["derive"], optional = true }
pollster = { version = "0.4", optional = true }
apollofft-wgpu = { workspace = true, optional = true }

# Machine Learning (Sprint 143 - PINNs with burn integration)
# Updated to burn 0.18.0 (bincode compatibility resolved)
burn = { version = "0.19", features = ["ndarray", "autodiff", "wgpu"] }

# Visualization (optional)
plotly = { version = "0.8", optional = true }
egui = { version = "0.25", optional = true }





# Medical image registration toolkit (mandatory — owns DICOM I/O via ritk-io
# and registration via ritk-registration; no optional gating because the
# kwavers domain layer relies on these as the single source of truth).
ritk-registration = { workspace = true }
ritk-core = { workspace = true }
ritk-io = { workspace = true }
consus-core = { workspace = true }
consus-hdf5 = { workspace = true }
consus-io = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
# Minimal dev dependencies for testing only
# Enable kwavers-domain's `test-util` feature so cross-crate test helpers
# (domain::plugin::test_support) are available to kwavers' own tests.
kwavers-domain = { path = "../kwavers-domain", features = ["test-util"] }
criterion = "0.4"
# GIF animation support for example outputs (e.g. liver_theranostic_reconstruction)
image = { version = "0.24", default-features = false, features = ["gif"] }
proptest = "1.2"
# PNG encoding for example image output (seismic_imaging_demo, etc.)
png = "0.17"
# Charting for comparison test figures (bitmap PNG backend)
plotters = { version = "0.3", default-features = false, features = [
    "bitmap_backend",
    "bitmap_encoder",
    "line_series",
    "area_series",
    "full_palette",
    "ttf",
] }

# Async testing support
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
tempfile = { workspace = true }

# Concurrency testing (Sprint 138 - Persona Requirements)
loom = "0.7"

[features]
default = ["minimal"]  # PRODUCTION DEFAULT
minimal = []           # Core functionality only
parallel = ["ndarray/rayon"] # Add back parallel feature
gpu = ["kwavers-gpu/gpu", "dep:wgpu", "dep:bytemuck", "dep:pollster", "dep:apollofft-wgpu", "kwavers-core/gpu", "kwavers-math/gpu", "kwavers-solver/gpu", "kwavers-analysis/gpu", "kwavers-simulation/gpu", "kwavers-diagnostics/gpu"]
plotting = ["dep:plotly", "kwavers-analysis/plotting"]
# Additional features referenced in code
dicom = []             # No-op alias retained for back-compat; DICOM I/O is unconditional via ritk-io.
nifti = ["kwavers-core/nifti", "kwavers-simulation/nifti", "kwavers-therapy/nifti"]   # Medical imaging support (forwards to kwavers-core)
nightly = []           # Nightly Rust features
simd = []              # SIMD acceleration support
fpu = []               # FPU acceleration support
advanced-visualization = ["plotting"] # Advanced visualization features
web-visualization = ["plotting"]      # Web-based visualization
gpu-visualization = ["gpu", "plotting", "dep:egui", "kwavers-analysis/gpu-visualization"] # GPU-accelerated visualization
vr-support = []        # VR headset support (future)
# Sprint 138 - Persona Requirements
async-runtime = ["dep:tokio", "kwavers-solver/async-runtime"]        # Async I/O with tokio
structured-logging = ["dep:tracing-subscriber"]  # Tracing infrastructure
zero-copy = ["dep:rkyv"]             # Zero-copy serialization
# Sprint 142-143 - Physics-Informed Neural Networks
# Sprint 143: Added burn 0.18 integration (bincode compatibility resolved)
pinn = ["kwavers-solver/pinn", "kwavers-analysis/pinn", "kwavers-diagnostics/pinn"]                            # Physics-informed neural networks (burn is now mandatory via ritk-io transitive dep)
pinn-gpu = ["pinn", "gpu"]           # PINN with GPU acceleration via WGPU
burn-wgpu = ["pinn", "kwavers-solver/burn-wgpu"]                 # Burn WGPU backend support (for cfg checks)
burn-cuda = ["pinn"]                 # Burn CUDA backend support (for cfg checks)
experimental_neural = ["pinn"]        # Gate experimental neural beamforming atop PINN deps
# Adaptive Beamforming Refactor - Sprint ADR-001
legacy_algorithms = []               # Legacy beamforming algorithms (deprecated)
opast = []                           # OPAST benchmarks (Criterion)
# Sprint 159 - Enterprise API for production deployment
# Feature flags for conditional compilation (used in tests/examples)
em_pinn_module_exists = []          # Conditional feature for electromagnetic PINN tests
ai_integration_module_exists = []   # Conditional feature for AI integration tests
# NOTE: ritk-core and ritk-io are now mandatory dependencies (see [dependencies]),
# so the former `ritk` feature is a no-op alias retained only for callers that
# still pass `--features ritk` on the CLI. New code should not gate on it.
ritk = []
full = ["gpu", "plotting", "parallel", "dicom", "nifti", "advanced-visualization", "gpu-visualization", "async-runtime", "structured-logging", "zero-copy", "pinn"]

# SRS NFR-002 Compliant Test Configuration Strategy
# ================================================
# TIER 1: Fast unit tests (<10s) - Always run in CI/CD
# - Library unit tests: cargo test --lib
# - Fast integration tests below
#
# TIER 2: Standard tests (<30s) - Run on PR validation
# - All tests in tests/ directory with required-features = []
#
# TIER 3: Comprehensive validation (>30s) - Run on release validation
# - Tests requiring "full" feature set
# - Literature validation benchmarks
# - Physics validation suites

# TIER 1: Fast integration tests (<10s execution)
[[test]]
name = "infrastructure_test"
harness = true
required-features = []

[[test]]
name = "integration_test"
harness = true
required-features = []

[[test]]
name = "fast_unit_tests"
harness = true
required-features = []

[[test]]
name = "simple_integration_test"
harness = true
required-features = []

# TIER 2: Standard validation tests (<30s each when run separately)
[[test]]
name = "cfl_stability_test"
harness = true
required-features = []

[[test]]
name = "energy_conservation_test"
harness = true
required-features = []

# TIER 3: Comprehensive validation tests (>30s) - Requires full feature set
[[test]]
name = "validation_suite"
harness = true
required-features = ["full"]

[[test]]
name = "literature_validation"
harness = true
required-features = ["full"]

[[test]]
name = "physics_validation_test"
harness = true
required-features = ["full"]

[[test]]
name = "rigorous_physics_validation"
harness = true
required-features = ["full"]

[[test]]
name = "solver_test"
harness = true
required-features = ["full"]

[[test]]
name = "absorption_validation_test"
harness = true
required-features = []

[[test]]
name = "dispersion_validation_test"
harness = true
required-features = ["full"]

[[test]]
name = "elastic_wave_validation"
harness = true
required-features = ["full"]

[[test]]
name = "fdtd_pstd_comparison"
harness = true
required-features = []

[[test]]
name = "physics_validation"
harness = true
required-features = ["full"]

[[test]]
name = "dg_convergence"
harness = true
required-features = []

[lib]
test = true

# BENCHMARK CONFIGURATION (Sprint 107 - P0 Priority)
# ===================================================
# Statistical performance benchmarks using criterion
# Execute: cargo bench (full suite) or cargo bench --bench <name> (individual)
# Purpose: Establish baseline metrics for optimization tracking
# Target: Document performance characteristics per ADR-010

[[bench]]
name = "performance_baseline"
harness = false

[[bench]]
name = "critical_path_benchmarks"
harness = false

[[bench]]
name = "grid_benchmarks"
harness = false

[[bench]]
name = "physics_benchmarks"
harness = false

[[bench]]
name = "cpml_benchmark"
harness = false

[[bench]]
name = "testing_infrastructure"
harness = false

[[bench]]
name = "validation_benchmarks"
harness = false

[[bench]]
name = "pinn_elastic_2d_training"
harness = false
required-features = ["pinn"]

# PINN Validation Tests (Sprint 212 Phase 2)
[[test]]
name = "pinn_bc_validation"
harness = true
required-features = ["pinn"]

[[bench]]
name = "logging_benchmark"
harness = false

[[bench]]
name = "hilbert_benchmark"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }


[[bench]]
name = "osem_benchmark"
harness = false

[[bench]]
name = "art_benchmark"
harness = false

[[bench]]
name = "fnm_performance_benchmark"
harness = false

[[bench]]
name = "amr_criteria_benchmark"
harness = false

[[bench]]
name = "adaptive_sampling_opt"
harness = false
required-features = ["pinn"]

[[bench]]
name = "clinical_sound_speed_shift_openpros"
harness = false

[[bench]]
name = "gpu_beamforming_benchmark"
harness = false

[[example]]
name = "skull_ct_phase_correction"
path = "examples/skull_ct_phase_correction.rs"

[[example]]
name = "seismic_imaging_demo"
path = "examples/seismic_imaging_demo.rs"

[[example]]
name = "seismic_imaging_3d_demo"
path = "examples/seismic_imaging_3d_demo.rs"

[[example]]
name = "field_surrogate_demo"
path = "examples/field_surrogate_demo.rs"
required-features = ["pinn"]

[[example]]
name = "liver_theranostic_reconstruction"
path = "examples/liver_theranostic_reconstruction.rs"
required-features = ["nifti"]
