[package]
name = "kwavers"
version = "3.0.0"
edition = "2021"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
description = "Ultrasound Simulation Toolbox with Cavitation and Light Physics"
license = "MIT"
repository = "https://github.com/ryancinsight/kwavers"
keywords = ["ultrasound", "simulation", "physics", "cavitation", "sonoluminescence", "medical-imaging"]
categories = ["science", "simulation", "medical"]
autobenches = false

# This is a workspace member - see root Cargo.toml for workspace configuration

[dependencies]
# `kwavers` is the thin top-level app/integration crate (ADR 011 amendment): it
# hosts the binary + cross-cutting tests/examples/benches and re-exports NOTHING.
# It depends on the layer crates directly so those targets can use them.

# Foundation layer. `channels`+`registration` are always-on (flume/
# ritk-registration); GPU execution is forwarded from this crate's features.
kwavers-core = { path = "../kwavers-core", features = ["channels", "registration"] }
kwavers-optics = { path = "../kwavers-optics" }
kwavers-math = { path = "../kwavers-math" }
kwavers-grid = { path = "../kwavers-grid" }
kwavers-imaging = { path = "../kwavers-imaging" }
kwavers-transducer = { path = "../kwavers-transducer" }
kwavers-receiver = { path = "../kwavers-receiver" }
kwavers-source = { path = "../kwavers-source" }
kwavers-boundary = { path = "../kwavers-boundary" }
kwavers-phantom = { path = "../kwavers-phantom" }
kwavers-medium = { path = "../kwavers-medium" }
kwavers-field = { path = "../kwavers-field" }
kwavers-signal = { path = "../kwavers-signal" }
kwavers-physics = { path = "../kwavers-physics", features = ["clinical-imaging"] }
kwavers-solver = { path = "../kwavers-solver", features = ["clinical-imaging"] }
kwavers-analysis = { path = "../kwavers-analysis" }
kwavers-simulation = { path = "../kwavers-simulation" }
kwavers-diagnostics = { path = "../kwavers-diagnostics" }
kwavers-therapy = { path = "../kwavers-therapy" }
# Consolidated GPU backend. Regular dep (tiny without the `gpu` feature - just
# allocation profiling); concrete provider paths activate via `kwavers-gpu`
# features and remain owned by the leaf GPU crate.
kwavers-gpu = { path = "../kwavers-gpu" }

# Essential numerical computing
moirai-parallel = { workspace = true }
leto = { workspace = true }
eunomia = { workspace = true }
apollo = { workspace = true }
gaia = { workspace = true }

# Error handling (production critical)
thiserror = "1.0"
anyhow = "1.0"

# Serialization (minimal)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Unit safety

# Essential utilities
log = "0.4"
env_logger = "0.11"
tracing = { version = "0.1", features = ["attributes"] }
bitflags = "2.4"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
# NOTE: medical-image I/O (DICOM, NIfTI, …) is owned by ritk-io and bridged in
# `domain::imaging::medical::ritk_bridge`; kwavers has no direct format-crate deps.
chrono = { version = "0.4", features = ["serde"] }

tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

# Zero-copy serialization (Sprint 138 - Persona Requirements)
rkyv = { version = "0.7", features = ["validation"], optional = true }


# Concurrency
parking_lot = "0.12"
once_cell = "1.19"
flume = "0.11"

# Testing utilities (minimal)
approx = "0.5"

# CONDITIONAL FEATURES (disabled by default)
# GPU acceleration (optional). The top-level crate forwards provider features;
# concrete WGPU/CUDA execution remains behind `kwavers-gpu` provider traits.

# Visualization (optional)
plotly = { version = "0.8", optional = true }
egui = { version = "0.25", optional = true }





# Medical image registration toolkit (mandatory — owns DICOM I/O via ritk-io
# and registration via ritk-registration; no optional gating because the
# kwavers domain layer relies on these as the single source of truth).
ritk-registration = { workspace = true }
ritk-core = { workspace = true }
ritk-io = { workspace = true }
consus-core = { workspace = true }
consus-hdf5 = { workspace = true }
consus-io = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
# Minimal dev dependencies for testing only
# Enable kwavers-solver's `test-util` feature so cross-crate test helpers
# (kwavers_solver::plugin::test_support) are available to kwavers' own tests.
kwavers-solver = { path = "../kwavers-solver", features = ["test-util"] }
criterion = "0.4"
# GIF animation support for example outputs (e.g. liver_theranostic_reconstruction)
image = { version = "0.24", default-features = false, features = ["gif"] }
proptest = "1.2"
# PNG encoding for example image output (seismic_imaging_demo, etc.)
png = "0.17"
# Charting for comparison test figures (bitmap PNG backend)
plotters = { version = "0.3", default-features = false, features = [
    "bitmap_backend",
    "bitmap_encoder",
    "line_series",
    "area_series",
    "full_palette",
    "ttf",
] }

coeus-core = { workspace = true }
coeus-autograd = { workspace = true }
coeus-tensor = { workspace = true }
ritk-image = { workspace = true }
ritk-spatial = { workspace = true }
tempfile = { workspace = true }
hephaestus-wgpu = { workspace = true }

# Concurrency testing (Sprint 138 - Persona Requirements)
loom = "0.7"

[features]
default = ["minimal"]  # PRODUCTION DEFAULT
minimal = []           # Core functionality only
gpu = ["kwavers-gpu/gpu", "kwavers-math/gpu", "kwavers-solver/gpu", "kwavers-analysis/gpu", "kwavers-simulation/gpu", "kwavers-diagnostics/gpu"]
cuda-provider = ["gpu", "kwavers-gpu/cuda-provider"]
cuda-runtime = ["cuda-provider", "kwavers-gpu/cuda-runtime"]
plotting = ["dep:plotly", "kwavers-analysis/plotting"]
# Additional features referenced in code
dicom = []             # No-op alias retained for back-compat; DICOM I/O is unconditional via ritk-io.

nightly = []           # Nightly Rust features
simd = []              # SIMD acceleration support
fpu = []               # FPU acceleration support
advanced-visualization = ["plotting"] # Advanced visualization features
web-visualization = ["plotting"]      # Web-based visualization
gpu-visualization = ["gpu", "plotting", "dep:egui", "kwavers-analysis/gpu-visualization"] # GPU-accelerated visualization
vr-support = []        # VR headset support (future)
# Sprint 138 - Persona Requirements
async-runtime = ["kwavers-solver/async-runtime"]        # Retained feature gate; runtime ownership is below top-level kwavers.
structured-logging = ["dep:tracing-subscriber"]  # Tracing infrastructure
zero-copy = ["dep:rkyv"]             # Zero-copy serialization
# Sprint 142-143 - Physics-Informed Neural Networks
pinn = ["kwavers-solver/pinn", "kwavers-analysis/pinn", "kwavers-diagnostics/pinn"]                            # Physics-informed neural networks
experimental_neural = ["pinn"]        # Gate experimental neural beamforming atop PINN deps
opast = []                           # OPAST benchmarks (Criterion)
# Sprint 159 - Enterprise API for production deployment
# Feature flags for conditional compilation (used in tests/examples)
em_pinn_module_exists = []          # Conditional feature for electromagnetic PINN tests
# NOTE: ritk-core and ritk-io are now mandatory dependencies (see [dependencies]),
# so the former `ritk` feature is a no-op alias retained only for callers that
# still pass `--features ritk` on the CLI. New code should not gate on it.
ritk = []
full = ["gpu", "plotting", "dicom", "advanced-visualization", "gpu-visualization", "async-runtime", "structured-logging", "zero-copy", "pinn"]

# SRS NFR-002 Compliant Test Configuration Strategy
# ================================================
# TIER 1: Fast unit tests (<10s) - Always run in CI/CD
# - Library unit tests: cargo test --lib
# - Fast integration tests below
#
# TIER 2: Standard tests (<30s) - Run on PR validation
# - All tests in tests/ directory with required-features = []
#
# TIER 3: Comprehensive validation (>30s) - Run on release validation
# - Tests requiring "full" feature set
# - Literature validation benchmarks
# - Physics validation suites

# TIER 1: Fast integration tests (<10s execution)
[[test]]
name = "infrastructure_test"
harness = true
required-features = []

[[test]]
name = "integration_test"
harness = true
required-features = []

[[test]]
name = "fast_unit_tests"
harness = true
required-features = []

[[test]]
name = "simple_integration_test"
harness = true
required-features = []

# TIER 2: Standard validation tests (<30s each when run separately)
[[test]]
name = "cfl_stability_test"
harness = true
required-features = []

[[test]]
name = "energy_conservation_test"
harness = true
required-features = []

# TIER 3: Comprehensive validation tests (>30s) - Requires full feature set
[[test]]
name = "validation_suite"
harness = true
required-features = ["full"]

[[test]]
name = "literature_validation"
harness = true
required-features = ["full"]

[[test]]
name = "physics_validation_test"
harness = true
required-features = ["full"]

[[test]]
name = "rigorous_physics_validation"
harness = true
required-features = ["full"]

[[test]]
name = "solver_test"
harness = true
required-features = ["full"]

[[test]]
name = "absorption_validation_test"
harness = true
required-features = []

[[test]]
name = "dispersion_validation_test"
harness = true
required-features = ["full"]

[[test]]
name = "elastic_wave_validation"
harness = true
required-features = ["full"]

[[test]]
name = "fdtd_pstd_comparison"
harness = true
required-features = []

[[test]]
name = "physics_validation"
harness = true
required-features = ["full"]

[[test]]
name = "dg_convergence"
harness = true
required-features = []

[lib]
test = true

# BENCHMARK CONFIGURATION (Sprint 107 - P0 Priority)
# ===================================================
# Statistical performance benchmarks using criterion
# Execute: cargo bench --benches (full suite) or cargo bench --bench <name>
# Purpose: Establish baseline metrics for optimization tracking
# Target: Document performance characteristics per ADR-010

[[bench]]
name = "performance_baseline"
harness = false

[[bench]]
name = "critical_path_benchmarks"
harness = false

[[bench]]
name = "grid_benchmarks"
harness = false

[[bench]]
name = "physics_benchmarks"
harness = false

[[bench]]
name = "cpml_benchmark"
harness = false

[[bench]]
name = "testing_infrastructure"
harness = false

[[bench]]
name = "validation_benchmarks"
harness = false

[[bench]]
name = "pinn_elastic_2d_training"
harness = false
required-features = ["pinn"]

# PINN Validation Tests (Sprint 212 Phase 2)
[[test]]
name = "pinn_bc_validation"
harness = true
required-features = ["pinn"]

[[bench]]
name = "logging_benchmark"
harness = false

[[bench]]
name = "hilbert_benchmark"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }


[[bench]]
name = "osem_benchmark"
harness = false

[[bench]]
name = "art_benchmark"
harness = false

[[bench]]
name = "fnm_performance_benchmark"
harness = false

[[bench]]
name = "amr_criteria_benchmark"
harness = false

[[bench]]
name = "adaptive_sampling_opt"
harness = false
required-features = ["pinn"]

[[bench]]
name = "clinical_sound_speed_shift_openpros"
harness = false

[[bench]]
name = "gpu_beamforming_benchmark"
harness = false

[[bench]]
name = "comparative_solver_benchmark"
harness = false

[[bench]]
name = "fdtd_propagation_benchmark"
harness = false

[[bench]]
name = "narrowband_beamforming"
harness = false

[[bench]]
name = "nl_swe_performance"
harness = false

[[bench]]
name = "pinn_performance_benchmarks"
harness = false
required-features = ["pinn"]

[[bench]]
name = "pinn_vs_fdtd_benchmark"
harness = false

[[bench]]
name = "simd_fdtd_benchmarks"
harness = false

[[bench]]
name = "ultrasound_benchmarks"
harness = false

[[example]]
name = "skull_ct_phase_correction"
path = "examples/skull_ct_phase_correction.rs"

[[example]]
name = "seismic_imaging_demo"
path = "examples/seismic_imaging_demo.rs"

[[example]]
name = "seismic_imaging_3d_demo"
path = "examples/seismic_imaging_3d_demo.rs"

[[example]]
name = "field_surrogate_demo"
path = "examples/field_surrogate_demo.rs"
required-features = ["pinn"]

[[example]]
name = "liver_theranostic_reconstruction"
path = "examples/liver_theranostic_reconstruction.rs"

[[example]]
name = "transcranial_ct_mri_reconstruction"
path = "examples/transcranial_ct_mri_reconstruction.rs"

[[example]]
name = "brain_theranostic_monitor"
path = "examples/brain_theranostic_monitor.rs"

[[example]]
name = "hybrid_lesion_monitor"
path = "examples/hybrid_lesion_monitor.rs"
